--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,18 @@
 @import '~@pxblue/colors/palette.scss';
-h3 {
-
+h2 {
   padding: 16px;
 }
 p {
   margin: 16px;
+  margin-top: -2%;
 }
 mat-card {
   margin:16px;
+  padding: 20px;
 }
 mat-form-field {
-  margin: 16px;
-  width: 95%;
-  align-content: center;
+ width: 100%;
+ margin-bottom: 35px;
 }
 .success{
 color: map-get($pxb-green, 500 );
