--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
         </mat-form-field>
         <mat-form-field>
           <input matInput placeholder="Confirm Password" required formControlName='confirmPassword'type="password" [errorStateMatcher]="errorMatcher">
-          <mat-error *ngIf="userPassword.hasError('passwordsDoNotMatch', 'passwordFormGroup')">passwords do not matched</mat-error>
+          <mat-error *ngIf="passwordFormGroup.hasError('passwordsDoNotMatch')">Passwords do not match</mat-error>
         </mat-form-field>
       </div>
     </form>
